# fnox

./: .gitignore  .gitmodules  .prettierignore  .shellcheckrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CRUSH.md  Cargo.toml  Cross.toml  DOCS_DEPLOYMENT.md  LICENSE  ONEPASSWORD.md  README.md  aube-lock.yaml  build.rs  cliff.toml  communique.toml  example.fnox.toml  fnox.toml  fnox.usage.kdl  hk.pkl  mise.toml  package-lock.json  package.json  settings.toml
.github/: renovate.json
.github/workflows/: autofix.yml  ci.yml  docs.yml  release-plz.yml  release.yml  test-claude.yml  zizmor.yml
crates/fnox-core/: Cargo.toml  build.rs
crates/fnox-core/providers/: age.toml  aws-ps.toml  azure-sm.toml  bitwarden.toml  doppler.toml  fido2.toml  foks.toml  gcp-kms.toml  keepass.toml  keychain.toml  proton-pass.toml  vault.toml  yubikey.toml
crates/fnox-core/src/: auth_prompt.rs  config.rs  credential_command.rs  env.rs  error.rs  http.rs  keyring_store.rs  lease.rs  lib.rs  library.rs  secret_resolver.rs  settings.rs  source_registry.rs  temp_file_secrets.rs
crates/fnox-core/src/lease_backends/: aws_sts.rs  azure_token.rs  cloudflare.rs  gcp_iam.rs  github_app.rs  github_oauth.rs  mod.rs  vault.rs
crates/fnox-core/src/providers/: age.rs  azure_kms.rs  azure_sm.rs  bitwarden_sm.rs  doppler.rs  fido2.rs  foks.rs  gcp_kms.rs  gcp_sm.rs  hw_encrypt.rs  infisical.rs  keepass.rs  keychain.rs  mod.rs  onepassword.rs  passwordstate.rs  resolved.rs  resolver.rs  secret_ref.rs  vault.rs  yubikey.rs  yubikey_usb.rs
docs/: README.md  contributing.md  index.md
docs/.vitepress/: config.mjs  stars.data.ts
docs/.vitepress/theme/: banner.css  banner.js  index.js  style.css
docs/cli/: activate.md  check.md  commands.json  completion.md  config-files.md  daemon.md  deactivate.md  doctor.md  edit.md  exec.md  export.md  get.md  import.md  index.md  init.md  lease.md  list.md  mcp.md  profiles.md  provider.md  reencrypt.md  remove.md  scan.md  set.md  sponsors.md  sync.md  tui.md  version.md
docs/cli/daemon/: clear.md  start.md  status.md  stop.md
docs/cli/lease/: cleanup.md  create.md  list.md  revoke.md
docs/cli/provider/: add.md  list.md  remove.md  test.md
docs/guide/: daemon.md  hierarchical-config.md  how-it-works.md  import-export.md  installation.md  leases.md  local-overrides.md  mcp.md  mise-integration.md  missing-secrets.md  profiles.md  quick-start.md  real-world-example.md  shell-integration.md  sync.md  tui.md  what-is-fnox.md
docs/leases/: aws-sts.md  azure-token.md  cloudflare.md  command.md  gcp-iam.md  github-app.md  github-oauth.md  vault.md
docs/providers/: 1password.md  age.md  aws-kms.md  aws-ps.md  aws-sm.md  azure-kms.md  azure-sm.md  bitwarden-sm.md  bitwarden.md  doppler.md  fido2.md  foks.md  gcp-kms.md  gcp-sm.md  infisical.md  keepass.md  keychain.md  overview.md  password-store.md  plain.md  vault.md  yubikey.md
docs/public/: schema.json  site.webmanifest
docs/reference/: commands.md  configuration.md  environment.md
mise-tasks/: gen-release-notes  gen-release-summary  release-plz
providers/: 1password.toml  aws-kms.toml  aws-ps.toml  aws-sm.toml  azure-kms.toml  azure-sm.toml  bitwarden-sm.toml  bitwarden.toml  fido2.toml  gcp-kms.toml  gcp-sm.toml  infisical.toml  password-store.toml  passwordstate.toml  plain.toml  vault.toml  yubikey.toml
src/: auth_prompt.rs  clap_sort.rs  config.rs  daemon.rs  env.rs  env_diff.rs  error.rs  hook_env.rs  http.rs  lease.rs  lib.rs  library.rs  main.rs  mcp_server.rs  secret_resolver.rs  settings.rs  source_registry.rs  spanned.rs  suggest.rs
src/assets/: fnox-extras.usage.kdl
src/commands/: activate.rs  check.rs  ci_redact.rs  completion.rs  config_files.rs  daemon.rs  deactivate.rs  decrypt.rs  doctor.rs  edit.rs  encrypt.rs  exec.rs  export.rs  get.rs  hook_env.rs  import.rs  init.rs  lease.rs  list.rs  mcp.rs  mod.rs  profiles.rs  reencrypt.rs  remove.rs  scan.rs  schema.rs  set.rs  sponsors.rs  sync.rs  tui.rs  usage.rs  version.rs
src/commands/provider/: add.rs  list.rs  mod.rs  remove.rs  test.rs
src/lease_backends/: aws_sts.rs  azure_token.rs  cloudflare.rs  command.rs  gcp_iam.rs  github_app.rs  mod.rs  vault.rs
src/providers/: age.rs  aws_kms.rs  aws_ps.rs  aws_sm.rs  azure_kms.rs  azure_sm.rs  bitwarden.rs  bitwarden_sm.rs  fido2.rs  gcp_kms.rs  gcp_sm.rs  hw_encrypt.rs  infisical.rs  keepass.rs  keychain.rs  mod.rs  onepassword.rs  password_store.rs  passwordstate.rs  plain.rs  proton_pass.rs  resolver.rs  secret_ref.rs  vault.rs  yubikey.rs  yubikey_usb.rs
src/shell/: bash.rs  fish.rs  mod.rs  nushell.rs  pwsh.rs  zsh.rs
src/tui/: app.rs  event.rs  mod.rs  terminal.rs  ui.rs
src/tui/components/: mod.rs
test/: BITWARDEN_TESTING.md  README.md  VAULT_TESTING.md  age.bats  aws_kms.bats  aws_parameter_store.bats  aws_secrets_manager.bats  aws_sts.bats  azure_kms.bats  azure_secrets_manager.bats  bitwarden.bats  bitwarden_sm.bats  broken_pipe.bats  check.bats  ci_redact.bats  comment-preservation.bats  config-ordering.bats  config_hierarchy_set.bats  config_recursion.bats  create-bitwarden-test-account.sh  create-test-account.sh  daemon.bats  default_provider.bats  docker-compose.bitwarden-ci.yml  docker-compose.bitwarden.yml  docker-compose.infisical-ci.yml  docker-compose.vault.yml  doctor.bats  dry_run.bats  edit.bats  exec_if_missing.bats  export_if_missing.bats  extract-db-with-wal.sh  file_secrets.bats  gcp_kms.bats  gcp_secret_manager.bats  global_config.bats  hook_env_columns.bats  hook_env_plain_inheritance.bats  hook_env_provider_inheritance.bats  (+39 more)
test/fixtures/: README.md  init-db.sh  vaultwarden-test.db
test/fixtures/bitwarden-certs/: README.md
test/test_helper/: assertions.bash  common_setup.bash  setup_helpers.bash
tmp/: README.md
