[package]
name = "fnox"
version = "1.16.1"
edition = "2024"
authors = ["@jdx"]
description = "A flexible secret management tool supporting multiple providers and encryption methods"
license = "MIT"
repository = "https://github.com/jdx/fnox"
readme = "README.md"
rust-version = "1.91.1"

[[bin]]
name = "fnox"
path = "src/main.rs"

[dependencies]
age = { version = "0.11", features = ["ssh"] }
anyhow = "1"
arboard = "3"
arc-swap = "1"
async-trait = "0.1"
atty = "0.2"
aws-config = { version = "1", features = ["sso", "credentials-process", "credentials-login"] }
aws-sdk-kms = { version = "1" }
aws-sdk-secretsmanager = { version = "1" }
aws-sdk-ssm = { version = "1" }
aws-sdk-sts = { version = "1" }
azure_core = { version = "0.30" }
azure_identity = { version = "0.30" }
azure_security_keyvault_keys = { version = "0.9" }
azure_security_keyvault_secrets = { version = "0.9" }
base64 = "0.22"
blake3 = "1"
chrono = "0.4"
ci_info = "0.14"
clap = { version = "4", features = ["derive", "env"] }
console = "0.16"
crossterm = { version = "0.29", features = ["event-stream"] }
data-encoding = "2"
demand = "2"
dirs = "6"
fslock = "0.2"
futures = "0.3"
gcp_auth = { version = "0.12" }
google-cloud-kms = { version = "0.6" }
google-cloud-secretmanager-v1 = { version = "1.1" }
hex = "0.4"
hkdf = "0.12"
indexmap = { version = "2", features = ["serde"] }
keepass = { version = "0.8", features = ["save_kdbx4"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
miette = { version = "7", features = ["fancy"] }
miniz_oxide = "0.8"
pluralizer = "0.5.0"
ratatui = "0.29"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rmp-serde = "1"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"] }
schemars = { version = "1", features = ["indexmap2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_spanned = "1"
serde_yaml = "0.9"
sha2 = "0.10"
shellexpand = "3"
shlex = "1.3.0"
strsim = "0.11"
strum = { version = "0.27", features = ["derive"] }
tabled = { version = "0.20", features = ["ansi"] }
tempfile = "3"
terminal_size = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml_edit = { version = "0.22", features = ["serde"] }
aes-gcm = "0.10"
ctap-hid-fido2 = "3.5.8"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"
usage-lib = { version = "2", features = ["clap"] }
walkdir = "2"
xx = { version = "2", features = ["fslock"] }
which = "7"
yubico_manager = "0.9"
signal-hook = "0.4.3"
nix = { version = "0.31.2", features = ["signal", "process"] }

[target.'cfg(target_os = "linux")'.dependencies]
dbus = { version = "0.9", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
indexmap = { version = "2", features = ["serde"] }
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
toml_edit = { version = "0.22", features = ["serde"] }
