[workspace]
members = [".", "crates/fnox-core"]
resolver = "3"

[workspace.package]
version = "1.24.0"
edition = "2024"
authors = ["@jdx"]
license = "MIT"
repository = "https://github.com/jdx/fnox"
rust-version = "1.91.1"

[workspace.dependencies]
aes-gcm = "0.11.0-rc.3"
age = { version = "0.11", features = ["ssh"] }
aho-corasick = "1.1.4"
anyhow = "1"
arboard = "3"
arc-swap = "1"
async-trait = "0.1"
atty = "0.2"
aws-config = { version = "1", features = ["sso", "credentials-process", "credentials-login"] }
aws-sdk-kms = { version = "1" }
aws-sdk-secretsmanager = { version = "1" }
aws-sdk-ssm = { version = "1" }
aws-sdk-sts = { version = "1" }
azure_core = { version = "0.30" }
azure_identity = { version = "0.30" }
azure_security_keyvault_keys = { version = "0.9" }
azure_security_keyvault_secrets = { version = "0.9" }
base64 = "0.22"
blake3 = "1"
chrono = "0.4"
ci_info = "0.14"
clap = { version = "4", features = ["derive", "env"] }
console = "0.16"
crossterm = { version = "0.29", features = ["event-stream"] }
ctap-hid-fido2 = "3"
data-encoding = "2"
dbus = { version = "0.9", features = ["vendored"] }
demand = "2"
dirs = "6"
fslock = "0.2"
futures = "0.3"
gcp_auth = { version = "0.12" }
google-cloud-kms = { version = "0.6" }
google-cloud-secretmanager-v1 = { version = "1.1" }
hex = "0.4"
hkdf = "0.13"
indexmap = { version = "2", features = ["serde"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
keepass = { version = "0.10", features = ["save_kdbx4"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
libloading = "0.9"
miette = { version = "7", features = ["fancy"] }
miniz_oxide = "0.9"
nix = { version = "0.31", features = ["signal", "process"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
pluralizer = "0.5"
proc-macro2 = "1"
quote = "1"
rand = "0.10"
ratatui = "0.30"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
rmcp = { version = "1", features = ["server", "transport-io", "macros"] }
rmp-serde = "1"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"] }
schemars = { version = "1", features = ["indexmap2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_spanned = "1"
serde_yaml = "0.9"
sha2 = "0.11"
shellexpand = "3"
shlex = "1"
signal-hook = "0.4"
strsim = "0.11"
strum = { version = "0.28", features = ["derive"] }
tabled = { version = "0.20", features = ["ansi"] }
tempfile = "3"
terminal_size = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml_edit = { version = "0.25", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
usage-lib = { version = "3", features = ["clap"] }
walkdir = "2"
which = "8"
xx = { version = "2", features = ["fslock"] }

[package]
name = "fnox"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "A flexible secret management tool supporting multiple providers and encryption methods"
readme = "README.md"

[[bin]]
name = "fnox"
path = "src/main.rs"

[dependencies]
fnox-core = { path = "crates/fnox-core", version = "1.24.0" }

# Direct dependencies of the CLI binary (commands, MCP server, TUI, hook-env,
# shell integration). Provider/config/secret-resolver crates are pulled in
# transitively via fnox-core and are not listed here.
aho-corasick = { workspace = true }
anyhow = { workspace = true }
arboard = { workspace = true }
atty = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
ci_info = { workspace = true }
clap = { workspace = true }
console = { workspace = true }
crossterm = { workspace = true }
data-encoding = { workspace = true }
demand = { workspace = true }
indexmap = { workspace = true }
miette = { workspace = true }
miniz_oxide = { workspace = true }
nix = { workspace = true }
ratatui = { workspace = true }
regex = { workspace = true }
rmcp = { workspace = true }
rmp-serde = { workspace = true }
rustls = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
shlex = { workspace = true }
signal-hook = { workspace = true }
strum = { workspace = true }
tabled = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
usage-lib = { workspace = true }
which = { workspace = true }

[dev-dependencies]
clap-sort = "1"
tempfile = { workspace = true }

[profile.dev]
debug = 1
